@@ -1,4 +1,4 @@
-# $Id: optimize_gcc.mk,v 1.29 2006/06/13 09:56:00 abs Exp $
+# $Id: optimize_gcc.mk,v 1.30 2006/10/12 12:41:46 abs Exp $
 
 # This file is 'experimental' - which is doublespeak for unspeakably
 # ugly, and quite broken by design.
@@ -18,16 +18,17 @@
 COPT_FLAGS=-finline-functions -fomit-frame-pointer -ffast-math 
 
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=firefox firefox-gtk1 galeon galeon-devel
-PKG_EXCLUDE_OMIT_FRAME_POINTER+=lua lua4 mozilla mozilla-gtk2
+PKG_EXCLUDE_OMIT_FRAME_POINTER+=lua lua4
+PKG_EXCLUDE_OMIT_FRAME_POINTER+=seamonkey # 1.0.5 gcc-4.1.2 NetBSD 4.99.3 i386
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=thunderbird thunderbird-gtk1
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=-base	# ruby18-base - NetBSD i386/3.0
 PKG_EXCLUDE_INLINE_FUNCTIONS+=qemu userppp vlc
 PKG_EXCLUDE_FAST_MATH+=firefox firefox-gtk1 # v1.0, NetBSD i386/2.0
-PKG_EXCLUDE_FAST_MATH+=qt3-libs     # gcc3.3.3, NetBSD i386/3.0, breaks kde3
-PKG_EXCLUDE_FAST_MATH+=perl         # perl5 '49/49!=1'
+PKG_EXCLUDE_FAST_MATH+=qt3-libs     	# gcc3.3.3 NetBSD i386/3.0 breaks kde3
+PKG_EXCLUDE_FAST_MATH+=perl         	# perl5 '49/49!=1'
 
 CPUFLAGS_PKGNAME:=${PKGNAME:?${PKGNAME}:${DISTNAME}}
-CPUFLAGS_PKGBASE:=${PKGBASE:?${PKGBASE}:${CPUFLAGS_PKGNAME:C/-[^-}]*$//}}
+CPUFLAGS_PKGBASE:=${PKGBASE:?${PKGBASE}:${CPUFLAGS_PKGNAME:C/-[^-{}]*$//}}
 
 .if !empty(PKG_EXCLUDE_OMIT_FRAME_POINTER:M${CPUFLAGS_PKGBASE})
 COPT_FLAGS:=    ${COPT_FLAGS:S/-fomit-frame-pointer//}
