@@ -1,4 +1,4 @@
->$NetBSD: CHANGES-2006,v 1.1471 2006/10/12 12:21:29 obache Exp $
+>$NetBSD: CHANGES-2006,v 1.1472 2006/10/12 12:42:20 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -4746,3 +4746,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Added x11/kdebindings-ruby version 3.3.5 [markd 2006-10-12]
 	Added emulators/kenigma version 1.2.1 [markd 2006-10-12]
 	Updated mail/spamass-milter to 0.3.1 [obache 2006-10-12]
+	Updated devel/cpuflags to 1.04 [abs 2006-10-12]
